--- a/.github/workflows/build-and-upload-compose.yml
+++ b/.github/workflows/build-and-upload-compose.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@4
+    - uses: actions/checkout@v4
     - name: Build the Docker image
       run: |
           docker compose build
